crates/hird-check/tests/snapshots/actors__actor_declares_typed_mailbox.snap
---
source: crates/hird-check/tests/actors.rs
expression: check_str(COUNTER)
---
Halt : PlannerMsg
Path : String → Path
Plan : Path → PlannerMsg
St : Int → St
read_repo : { path: Path } → St ! {Tool<ReadRepo>}
