crates/hird-check/tests/snapshots/actors__actor_state_is_encapsulated.snap
---
source: crates/hird-check/tests/actors.rs
expression: check_str(&source)
---
Halt : PlannerMsg
Path : String → Path
Plan : Path → PlannerMsg
St : Int → St
peek : ∀a. a
read_repo : { path: Path } → St ! {Tool<ReadRepo>}
error[C0040] 400..407: `Planner` is an actor, not a value; its state is only accessible within its own handlers
