crates/hird-check/tests/snapshots/actors__call_constructor_application_rejected.snap
---
source: crates/hird-check/tests/actors.rs
expression: check_str(&source)
---
Get : ReplyTo<Status> → Msg
Inc : Msg
St : Int → St
Status : Int → Status
forward : ∀a. a
error[C0043] 406..409: `Get` carries a reply channel; it can only be used as the message builder of `request`
