crates/hird-check/tests/snapshots/actors__clock_and_schedule_contribute_their_effects.snap
---
source: crates/hird-check/tests/actors.rs
expression: check_str(&source)
---
Get : ReplyTo<Status> → Msg
Inc : Msg
St : Int → St
Status : Int → Status
handed : Clock → Pid<Msg> → () ! {Schedule<Msg>}
quiet : Pid<Msg> → () ! {Clock, Schedule<Msg>}
tick : Pid<Msg> → () ! {Clock, Schedule<Msg>}
error[C0030] 599..606: declared {Schedule<Msg>} but body performs {Clock, Schedule<Msg>}
