crates/hird-check/tests/snapshots/actors__clock_is_not_wire_representable.snap
---
source: crates/hird-check/tests/actors.rs
expression: "check_str(\"tool Now : { clock: Clock } -> Int\")"
---
error[C0032] 5..8: tool `Now` args are not wire-representable: `Clock` is an opaque capability
