crates/hird-check/tests/snapshots/actors__duplicate_actor_rejected.snap
---
source: crates/hird-check/tests/actors.rs
expression: "check_str(\"type St = St(Int)\\n\\\n         actor A {\\n\\\n           state: St,\\n\\\n           message: Msg = | Stop,\\n\\\n           init: fn(s: St) -> St ! {} = s,\\n\\\n           handle Stop, st -> St ! {} = st,\\n\\\n         }\\n\\\n         actor A {\\n\\\n           state: St,\\n\\\n           message: Msg2 = | Halt,\\n\\\n           init: fn(s: St) -> St ! {} = s,\\n\\\n           handle Halt, st -> St ! {} = st,\\n\\\n         }\")"
---
Halt : Msg2
St : Int → St
Stop : Msg
error[C0035] 135..136: duplicate actor `A`
error[C0037] 212..217: `Halt` is not a constructor of actor `A`'s message type `Msg`
