crates/hird-check/tests/snapshots/actors__handler_body_must_return_next_outcome.snap
---
source: crates/hird-check/tests/actors.rs
expression: "check_str(\"type St = St(Int)\\n\\\n         actor A {\\n\\\n           state: St,\\n\\\n           message: Msg = | Halt,\\n\\\n           init: fn(s: St) -> St ! {} = s,\\n\\\n           handle Halt, st -> Next<St> ! {} = 42,\\n\\\n         }\")"
---
Halt : Msg
St : Int → St
error[C0001] 129..131: type mismatch: expected `Next<St>`, got `Int`
